--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,7 +65,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 Barber Portfolio</p>
+        <p>&copy; 2023 Maliya Corporation</p>
     </footer>
     <script src="script.js"></script>
 </body>
