--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,8 +59,8 @@
 
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Email: [Email Address]</p>
-        <p>Phone: [Phone Number]</p>
+        <p>Email: leonardo3001@gmail.com</p>
+        <p>Phone: 510-674-6973</p>
         <!-- You can also add a contact form here if you prefer -->
     </section>
 
